--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,7 +109,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="77dp"
         android:orientation="horizontal">
 
         <Button
@@ -134,4 +134,10 @@
             android:onClick="onClickNewMatch"
             android:text="@string/btn_new_match" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:text="TextView" />
 </LinearLayout>
